[movies] update: Update detekt plugin to latest 1.14.0 version
Also, as part of this update the companion object ordering was changed,
from top to bottom, based on the new 'ClassOrdering' rule, which depends
on this Kotlin related coding convention: https://kotlinlang.org/
docs/reference/coding-conventions.html#class-layout

--- a/config/quality/detekt.yml
+++ b/config/quality/detekt.yml
@@ -126,6 +126,8 @@ complexity:
   NestedBlockDepth:
     active: true
     threshold: 4
+  ReplaceSafeCallChainWithRun:
+    active: true
   StringLiteralDuplication:
     active: true
     excludes: [
@@ -176,6 +178,8 @@ coroutines:
   GlobalCoroutineUsage:
     active: true
   RedundantSuspendModifier:
+    active: true
+  SuspendFunWithFlowReturnType:
     active: true
 
 empty-blocks:
@@ -322,6 +326,12 @@ formatting:
   autoCorrect: true
   AnnotationOnSeparateLine:
     active: false
+    autoCorrect: true
+  AnnotationSpacing:
+    active: true
+    autoCorrect: true
+  ArgumentListWrapping:
+    active: true
     autoCorrect: true
   ChainWrapping:
     active: true
@@ -829,6 +839,8 @@ potential-bugs:
 
 style:
   active: true
+  ClassOrdering:
+    active: true
   CollapsibleIfStatements:
     active: true
   DataClassContainsFunctions:
