[movies] update: Update gradle to release candidate 6.7-rc-3 version
Command: gradlew wrapper --gradle-version=6.7-rc-3

Also as part of this update the file system watching got enabled to
improve incremental build performance by reducing the amount of disk I/O
needed to determine what has changed since the previous build. For more
details on this newly production ready feature see link below:
https://docs.gradle.org/6.7-rc-3/release-notes.html#file-system-watching

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,5 @@ android.enableJetifier=true
 org.gradle.console=verbose
 # Dependency Analysis
 dependency.analysis.silent=true
+# File System Watching
+org.gradle.vfs.watch=true
