[movies] build: Update org.gradle.jvmargs to improve build times
More details for each option below:
-XX:GCTimeLimit=20 - Don't spend more than 20% of the time doing GC.
(default is 98%)
-XX:GCHeapFreeLimit=10 - Free at least 10% of heap on each GC.
(default is 2%)
-XX:MaxMetaspaceSize=512m - metaspace is the Java 8 replacement for
PermGen. (default is 256m)
-Dfile.encoding=UTF-8 - Explicit UTF-8 file encoding.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,10 @@
 # JVM arguments
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xms2g -Xmx8g -XX:+HeapDumpOnOutOfMemoryError
+# -XX:GCTimeLimit=20 --> Don't spend more than 20% of the time doing GC. (default is 98%)
+# -XX:GCHeapFreeLimit=10 --> Free at least 10% of heap on each GC. (default is 2%)
+# -XX:MaxMetaspaceSize=1g --> metaspace is the Java 8 replacement for PermGen. (default is 256m)
+org.gradle.jvmargs=-Xms2g -Xmx8g -XX:+HeapDumpOnOutOfMemoryError -XX:GCTimeLimit=20 -XX:GCHeapFreeLimit=10 -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8
 # Parallel Builds
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
