--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,9 @@ org.gradle.jvmargs=-Xms2g -Xmx8g -XX:+HeapDumpOnOutOfMemoryError -XX:GCTimeLimit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 org.gradle.parallel=true
 org.gradle.workers.max=4
+# Kotlin
+systemProp.kotlin.daemon.jvm.options=-Xms2g,-Xmx8g
+kapt.use.worker.api=true
 # Caching
 # For more details on how to configure caching visit
 # https://blog.jetbrains.com/kotlin/2018/02/using-gradle-build-cache-with-kotlin
