--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,7 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-# Releases: https://docs.gradle.org/6.7-rc-3/release-notes.html
-# Released: 14-10-20
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.7-all.zip
+# Releases: https://docs.gradle.org/6.7.1/release-notes.html
+# Released: 16-11-20
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.7.1-all.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
