--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@
 # -XX:GCTimeLimit=20 --> Don't spend more than 20% of the time doing GC. (default is 98%)
 # -XX:GCHeapFreeLimit=10 --> Free at least 10% of heap on each GC. (default is 2%)
 # -XX:MaxMetaspaceSize=1g --> metaspace is the Java 8 replacement for PermGen. (default is 256m)
-org.gradle.jvmargs=-Xms2g -Xmx8g -XX:+HeapDumpOnOutOfMemoryError -XX:GCTimeLimit=20 -XX:GCHeapFreeLimit=10 -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xms2g -Xmx8g -XX:+HeapDumpOnOutOfMemoryError -XX:GCTimeLimit=20 -XX:GCHeapFreeLimit=10 -XX:MaxMetaspaceSize=1g -XX:+UseParallelGC -Dfile.encoding=UTF-8
 # Parallel Builds
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
