[movies] update: Update gradle to latest 6.8-rc-3 version
Command: gradlew wrapper --gradle-version=6.8-rc-3

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,7 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-# Releases: https://docs.gradle.org/6.7.1/release-notes.html
-# Released: 16-11-20
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.7.1-all.zip
+# Releases: https://docs.gradle.org/6.8-rc-3/release-notes.html
+# Released: 17-12-20
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.8-rc-3-all.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
