--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,7 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-# Releases: https://docs.gradle.org/6.8-rc-4/release-notes.html
-# Released: 22-12-20
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.8-rc-4-all.zip
+# Releases: https://docs.gradle.org/6.8/release-notes.html
+# Released: 08-01-21
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.8-all.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
