--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,7 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-# Releases: https://docs.gradle.org/6.8.2/release-notes.html
-# Released: 05-02-21
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.8.2-all.zip
+# Releases: https://docs.gradle.org/7.0-milestone-1/release-notes.html
+# Released: 03-02-21
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.0-milestone-1-all.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
