--- a/config/quality/detekt.yml
+++ b/config/quality/detekt.yml
@@ -18,11 +18,18 @@ processors:
   active: true
   exclude:
     - 'DetektProgressListener'
+  # - 'KtFileCountProcessor'
+  # - 'PackageCountProcessor'
+  # - 'ClassCountProcessor'
   # - 'FunctionCountProcessor'
   # - 'PropertyCountProcessor'
-  # - 'ClassCountProcessor'
-  # - 'PackageCountProcessor'
-  # - 'KtFileCountProcessor'
+  # - 'ProjectComplexityProcessor'
+  # - 'ProjectCognitiveComplexityProcessor'
+  # - 'ProjectLLOCProcessor'
+  # - 'ProjectCLOCProcessor'
+  # - 'ProjectLOCProcessor'
+  # - 'ProjectSLOCProcessor'
+  # - 'LicenseHeaderLoaderExtension'
 
 console-reports:
   active: true
@@ -30,7 +37,7 @@ console-reports:
     - 'ProjectStatisticsReport'
     - 'ComplexityReport'
     - 'NotificationReport'
-    # - 'FindingsReport'
+  # - 'FindingsReport'
     - 'FileBasedFindingsReport'
 
 output-reports:
@@ -59,6 +66,7 @@ comments:
   AbsentOrWrongFileLicense:
     active: false
     licenseTemplateFile: 'license.template'
+    licenseTemplateIsRegex: false
   CommentOverPrivateFunction:
     active: true
   CommentOverPrivateProperty:
@@ -182,6 +190,8 @@ coroutines:
     active: true
   RedundantSuspendModifier:
     active: true
+  SleepInsteadOfDelay:
+    active: true
   SuspendFunWithFlowReturnType:
     active: true
 
@@ -247,6 +257,8 @@ exceptions:
       '**/iosTest/**'
     ]
   NotImplementedDeclaration:
+    active: true
+  ObjectExtendsThrowable:
     active: true
   PrintStackTrace:
     active: true
@@ -411,6 +423,9 @@ formatting:
     active: true
     autoCorrect: true
     indentSize: 4
+  SpacingAroundAngleBrackets:
+    active: true
+    autoCorrect: true
   SpacingAroundColon:
     active: true
     autoCorrect: true
@@ -436,6 +451,9 @@ formatting:
     active: true
     autoCorrect: true
   SpacingAroundRangeOperator:
+    active: true
+    autoCorrect: true
+  SpacingAroundUnaryOperator:
     active: true
     autoCorrect: true
   SpacingBetweenDeclarationsWithAnnotations:
@@ -596,6 +614,7 @@ naming:
     ignoreOverridden: true
   InvalidPackageDeclaration:
     active: true
+    excludes: ['*.kts']
     rootPackage: ''
   MatchingDeclarationName:
     active: true
@@ -603,6 +622,8 @@ naming:
   MemberNameEqualsClassName:
     active: true
     ignoreOverridden: true
+  NoNameShadowing:
+    active: true
   NonBooleanPropertyPrefixedWithIs:
     active: true
     excludes: [
@@ -770,13 +791,19 @@ performance:
 
 potential-bugs:
   active: true
+  CastToNullableType:
+    active: true
   Deprecation:
+    active: true
+  DontDowncastCollectionTypes:
     active: true
   DuplicateCaseInWhenExpression:
     active: true
   EqualsAlwaysReturnsTrueOrFalse:
     active: true
   EqualsWithHashCodeExist:
+    active: true
+  ExitOutsideMain:
     active: true
   ExplicitGarbageCollectionCall:
     active: true
@@ -785,7 +812,10 @@ potential-bugs:
   IgnoredReturnValue:
     active: true
     restrictToAnnotatedMethods: true
-    returnValueAnnotations: ['*.CheckReturnValue', '*.CheckResult']
+    returnValueAnnotations: [
+      '*.CheckReturnValue',
+      '*.CheckResult'
+    ]
   ImplicitDefaultLocale:
     active: true
   ImplicitUnitReturnType:
@@ -830,6 +860,8 @@ potential-bugs:
     active: true
   UnnecessarySafeCall:
     active: true
+  UnreachableCatchBlock:
+    active: true
   UnreachableCode:
     active: true
   UnsafeCallOnNullableType:
@@ -852,6 +884,9 @@ style:
     conversionFunctionPrefix: 'to'
   DataClassShouldBeImmutable:
     active: true
+  DestructuringDeclarationWithTooManyEntries:
+    active: true
+    maxDestructuringEntries: 3
   EqualsNullCall:
     active: true
   EqualsOnSignatureLine:
@@ -883,6 +918,7 @@ style:
     ]
   ForbiddenPublicDataClass:
     active: true
+    excludes: [ '**' ]
     ignorePackages: [
       '*.internal',
       '*.internal.*'
@@ -894,14 +930,17 @@ style:
   FunctionOnlyReturningConstant:
     active: true
     ignoreOverridableFunction: true
+    ignoreActualFunction: true
     excludedFunctions: 'describeContents'
     excludeAnnotatedFunction: [
       'dagger.Provides'
     ]
   LibraryCodeMustSpecifyReturnType:
     active: true
+    excludes: [ '**' ]
   LibraryEntitiesShouldNotBePublic:
     active: true
+    excludes: [ '**' ]
   LoopWithTooManyJumpStatements:
     active: true
     maxJumpCount: 1
@@ -936,6 +975,7 @@ style:
     ignoreNamedArgument: true
     ignoreEnums: false
     ignoreRanges: false
+    ignoreExtensionFunctions: true
   MandatoryBracesIfStatements:
     active: true
   MandatoryBracesLoops:
@@ -949,6 +989,8 @@ style:
   MayBeConst:
     active: true
   ModifierOrder:
+    active: true
+  MultilineLambdaItParameter:
     active: true
   NestedClassesVisibility:
     active: true
@@ -1002,6 +1044,8 @@ style:
     active: true
   UnnecessaryApply:
     active: true
+  UnnecessaryFilter:
+    active: true
   UnnecessaryInheritance:
     active: true
   UnnecessaryLet:
@@ -1032,6 +1076,10 @@ style:
   UseIfEmptyOrIfBlank:
     active: true
   UseIfInsteadOfWhen:
+    active: true
+  UseIsNullOrEmpty:
+    active: true
+  UseOrEmpty:
     active: true
   UseRequire:
     active: true
