[movies] update: Update gradle android plugin to 7.0.0-alpha09 version
This version of AGP has a 'Robolectric' bug, which is reported here:
https://github.com/robolectric/robolectric/issues/6277

Until the bug is fix, please running 'gradlew test' will fail all
Robolectfict related tests.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-        tools:ignore="GoogleAppIndexingWarning,UnusedAttribute"
+        tools:ignore="GoogleAppIndexingWarning,UnusedAttribute,MediaCapabilities"
         tools:replace="android:label,android:allowBackup">
 
         <activity
