--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,9 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+# Releases: https://docs.gradle.org/6.8.3/release-notes.html
+# Released: 22-02-21
+# distributionUrl=https\://services.gradle.org/distributions/gradle-6.8.3-all.zip
+# MILESTONE
 # Releases: https://docs.gradle.org/7.0-milestone-3/release-notes.html
 # Released: 13-03-21
 distributionUrl=https\://services.gradle.org/distributions/gradle-7.0-milestone-3-all.zip
