[movies] build: Disable android injected test only
When targeting Android S, the built apk, cannot be installed due to a
'[INSTALL_FAILED_TEST_ONLY' error. This Gradle configuration change
resolves that for the time being.

--- a/gradle.properties
+++ b/gradle.properties
@@ -30,3 +30,5 @@ org.gradle.console=verbose
 dependency.analysis.silent=true
 # File System Watching
 org.gradle.vfs.watch=true
+# Android S - adb: failed to install app-debug.apk: Failure [INSTALL_FAILED_TEST_ONLY: installPackageLI]
+android.injected.testOnly=false
