[movies] update: Update detekt plugin to latest 1.16.0 version

--- a/config/quality/detekt.yml
+++ b/config/quality/detekt.yml
@@ -868,6 +868,8 @@ potential-bugs:
     active: true
   UnsafeCast:
     active: true
+  UnusedUnaryOperator:
+    active: true
   UselessPostfixExpression:
     active: true
   WrongEqualsTypeParameter:
