[movies] update: Update gradle to latest rc 7.0-rc-1 version
Command: gradlew wrapper --gradle-version=7.0-rc-1

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -4,8 +4,8 @@ distributionPath=wrapper/dists
 # Released: 22-02-21
 # distributionUrl=https\://services.gradle.org/distributions/gradle-6.8.3-all.zip
 # MILESTONE
-# Releases: https://docs.gradle.org/7.0-milestone-3/release-notes.html
-# Released: 13-03-21
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.0-milestone-3-all.zip
+# Releases: https://docs.gradle.org/7.0-rc-1/release-notes.html
+# Released: 23-03-21
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.0-rc-1-all.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
