--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,11 +1,7 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-# Releases: https://docs.gradle.org/6.8.3/release-notes.html
-# Released: 22-02-21
-# distributionUrl=https\://services.gradle.org/distributions/gradle-6.8.3-all.zip
-# MILESTONE
-# Releases: https://docs.gradle.org/7.0-rc-2/release-notes.html
-# Released: 01-04-21
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.0-rc-2-all.zip
+# Releases: https://docs.gradle.org/7.0/release-notes.html
+# Released: 10-04-21
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.0-all.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
