[movies] analysis: Deactivate spacing between declarations detekt rules

--- a/config/quality/detekt.yml
+++ b/config/quality/detekt.yml
@@ -457,10 +457,10 @@ formatting:
     active: true
     autoCorrect: true
   SpacingBetweenDeclarationsWithAnnotations:
-    active: true
+    active: false
     autoCorrect: true
   SpacingBetweenDeclarationsWithComments:
-    active: true
+    active: false
     autoCorrect: true
   StringTemplate:
     active: true
