[movies] update: Update detekt plugin to rc 1.17.0-RC3 version

--- a/config/quality/detekt.yml
+++ b/config/quality/detekt.yml
@@ -723,6 +723,8 @@ style:
     active: true
   NoTabs:
     active: true
+  ObjectLiteralToLambda:
+    active: true
   OptionalAbstractKeyword:
     active: true
   OptionalUnit:
