--- a/config/quality/detekt.yml
+++ b/config/quality/detekt.yml
@@ -49,7 +49,6 @@ output-reports:
 
 comments:
   active: true
-  excludes: [ ]
   AbsentOrWrongFileLicense:
     active: false
     licenseTemplateFile: 'license.template'
@@ -65,14 +64,17 @@ comments:
     endOfSentenceFormat: '([.?!][ \t\n\r\f<])|([.?!:]$)'
   UndocumentedPublicClass:
     active: false
+    excludes: [ ]
     searchInNestedClass: true
     searchInInnerClass: true
     searchInInnerObject: true
     searchInInnerInterface: true
   UndocumentedPublicFunction:
     active: false
+    excludes: [ ]
   UndocumentedPublicProperty:
     active: false
+    excludes: [ ]
 
 complexity:
   active: true
@@ -90,17 +92,16 @@ complexity:
     ignoreSingleWhenExpression: false
     ignoreSimpleWhenEntries: false
     ignoreNestingFunctions: false
-    nestingFunctions: [
-        'run',
-        'let',
-        'apply',
-        'with',
-        'also',
-        'use',
-        'forEach',
-        'isNotNull',
-        'ifNull'
-    ]
+    nestingFunctions:
+      - 'run'
+      - 'let'
+      - 'apply'
+      - 'with'
+      - 'also'
+      - 'use'
+      - 'forEach'
+      - 'isNotNull'
+      - 'ifNull'
   LabeledExpression:
     active: true
     ignoredLabels: [ ]
@@ -110,6 +111,7 @@ complexity:
   LongMethod:
     active: true
     threshold: 60
+    ignoreAnnotated: [ ]
   LongParameterList:
     active: true
     functionThreshold: 6
@@ -207,12 +209,11 @@ exceptions:
   active: true
   ExceptionRaisedInUnexpectedLocation:
     active: true
-    methodNames: [
-        toString,
-        hashCode,
-        equals,
-        finalize
-    ]
+    methodNames:
+      - 'toString'
+      - 'hashCode'
+      - 'equals'
+      - 'finalize'
   InstanceOfCheckForException:
     active: true
     excludes: [ ]
@@ -230,10 +231,10 @@ exceptions:
   SwallowedException:
     active: true
     ignoredExceptionTypes:
-      - InterruptedException
-      - NumberFormatException
-      - ParseException
-      - MalformedURLException
+      - 'NumberFormatException'
+      - 'InterruptedException'
+      - 'ParseException'
+      - 'MalformedURLException'
     allowedExceptionNameRegex: '_|(ignore|expected).*'
   ThrowingExceptionFromFinally:
     active: true
@@ -243,31 +244,36 @@ exceptions:
     active: true
     excludes: [ ]
     exceptions:
-      - IllegalArgumentException
-      - IllegalStateException
-      - IOException
+      - 'ArrayIndexOutOfBoundsException'
+      - 'Error'
+      - 'Exception'
+      - 'IllegalMonitorStateException'
+      - 'NullPointerException'
+      - 'IndexOutOfBoundsException'
+      - 'RuntimeException'
+      - 'Throwable'
   ThrowingNewInstanceOfSameException:
     active: true
   TooGenericExceptionCaught:
     active: true
     excludes: [ ]
     exceptionNames:
-      - ArrayIndexOutOfBoundsException
-      - Error
-      - Exception
-      - IllegalMonitorStateException
-      - NullPointerException
-      - IndexOutOfBoundsException
-      - RuntimeException
-      - Throwable
+      - 'ArrayIndexOutOfBoundsException'
+      - 'Error'
+      - 'Exception'
+      - 'IllegalMonitorStateException'
+      - 'NullPointerException'
+      - 'IndexOutOfBoundsException'
+      - 'RuntimeException'
+      - 'Throwable'
     allowedExceptionNameRegex: '_|(ignore|expected).*'
   TooGenericExceptionThrown:
     active: true
     exceptionNames:
-      - Error
-      - Exception
-      - Throwable
-      - RuntimeException
+      - 'Error'
+      - 'Exception'
+      - 'Throwable'
+      - 'RuntimeException'
 
 formatting:
   active: true
@@ -461,7 +467,7 @@ naming:
   InvalidPackageDeclaration:
     active: true
     excludes: [
-        '*.kts'
+        '**/*.kts'
     ]
     rootPackage: ''
   MatchingDeclarationName:
@@ -545,10 +551,9 @@ potential-bugs:
   IgnoredReturnValue:
     active: true
     restrictToAnnotatedMethods: true
-    returnValueAnnotations: [
-        '*.CheckReturnValue',
-        '*.CheckResult'
-    ]
+    returnValueAnnotations:
+      - '*.CheckReturnValue'
+      - '*.CheckResult'
   ImplicitDefaultLocale:
     active: true
   ImplicitUnitReturnType:
@@ -622,11 +627,10 @@ style:
     includeLineWrapping: false
   ForbiddenComment:
     active: true
-    values: [
-        'TODO:',
-        'FIXME:',
-        'STOPSHIP:'
-    ]
+    values:
+      - 'TODO:'
+      - 'FIXME:'
+      - 'STOPSHIP:'
     allowedPatterns: ''
   ForbiddenImport:
     active: true
@@ -634,19 +638,17 @@ style:
     forbiddenPatterns: ''
   ForbiddenMethodCall:
     active: true
-    methods: [
-        'kotlin.io.println',
-        'kotlin.io.print'
-    ]
+    methods:
+      - 'kotlin.io.println'
+      - 'kotlin.io.print'
   ForbiddenPublicDataClass:
     active: true
     excludes: [
         '**'
     ]
-    ignorePackages: [
-        '*.internal',
-        '*.internal.*'
-    ]
+    ignorePackages:
+      - '*.internal'
+      - '*.internal.*'
   ForbiddenVoid:
     active: true
     ignoreOverridden: false
@@ -656,9 +658,8 @@ style:
     ignoreOverridableFunction: true
     ignoreActualFunction: true
     excludedFunctions: 'describeContents'
-    excludeAnnotatedFunction: [
-        'dagger.Provides'
-    ]
+    excludeAnnotatedFunction:
+      - 'dagger.Provides'
   LibraryCodeMustSpecifyReturnType:
     active: true
     excludes: [
@@ -685,12 +686,11 @@ style:
         '**/jsTest/**',
         '**/iosTest/**'
     ]
-    ignoreNumbers: [
-        '-1',
-        '0',
-        '1',
-        '2'
-    ]
+    ignoreNumbers:
+      - '-1'
+      - '0'
+      - '1'
+      - '2'
     ignoreHashCodeFunction: true
     ignorePropertyDeclaration: false
     ignoreLocalVariableDeclaration: false
@@ -757,6 +757,7 @@ style:
   ThrowsCount:
     active: true
     max: 2
+    excludeGuardClauses: false
   TrailingWhitespace:
     active: true
   UnderscoresInNumericLiterals:
@@ -764,9 +765,8 @@ style:
     acceptableDecimalLength: 5
   UnnecessaryAbstractClass:
     active: true
-    excludeAnnotatedClasses: [
-        'dagger.Module'
-    ]
+    excludeAnnotatedClasses:
+      - 'dagger.Module'
   UnnecessaryAnnotationUseSiteTarget:
     active: true
   UnnecessaryApply:
@@ -821,7 +821,6 @@ style:
   WildcardImport:
     active: true
     excludes: [ ]
-    excludeImports: [
-        'java.util.*',
-        'kotlinx.android.synthetic.*'
-    ]
+    excludeImports:
+      - 'java.util.*'
+      - 'kotlinx.android.synthetic.*'
