[movies] update: Update detekt plugin to rc 1.18.0-RC2 version
The 'ArgumentListWrapping' and 'Indentation' rules is still disabled.
Should be double checked for correctness once more afterwards.

--- a/config/quality/detekt.yml
+++ b/config/quality/detekt.yml
@@ -455,9 +455,8 @@ naming:
     functionPattern: '([a-z][a-zA-Z0-9]*)|(`.*`)'
     excludeClassPattern: '$^'
     ignoreOverridden: true
-    ignoreAnnotated: [
-        'Composable'
-    ]
+    ignoreAnnotated:
+      - 'Composable'
   FunctionParameterNaming:
     active: true
     excludes: [ ]
