--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,7 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-# Releases: https://docs.gradle.org/7.1.1/release-notes.html
-# Released: 02-07-21
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.1.1-all.zip
+# Releases: https://docs.gradle.org/7.2-rc-1/release-notes.html
+# Released: 29-07-21
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.2-rc-1-all.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
