--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,7 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-# Releases: https://docs.gradle.org/7.2/release-notes.html
-# Released: 17-08-21
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.2-all.zip
+# Releases: https://docs.gradle.org/7.3-rc-3/release-notes.html
+# Released: 26-10-21
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.3-rc-3-all.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
